--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -84,7 +84,7 @@
 							<div class="thumbnail   " style="padding-left: 90px;border:none;">
 								<div class="index-border" style="">
 									<img alt="Goa Medical Travel" src="/images/Icons_Hospital Home.png" align="middle"
-									style="margin-bottom: 0;width: 30%;height: auto;margin-left: auto;margin-right: auto;display: block;padding: 25px 0 15px 5px;" />
+									style="width: 30%;height: auto;" />
 								</div>
 								<div class="thumbnail index-info" style="">
 									<h4 style="">Providers</h4>
@@ -94,7 +94,7 @@
 									<p style="">Send customised queries</p>
 									<div style=" text-align:center">
 										<span style="">
-											<img src="../images/Arrow.png" style="width:8%;">
+											<img src="../images/Arrow.png" style="width:8%;margin-top:-15px;">
 										</span>
 									</div>
 								</div>
@@ -107,7 +107,7 @@
 							<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
 								<div class="index-border" style="">
 									<img alt="Goa Medical Travel" src="/images/poo.png"
-									style="width:47%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;display: block;padding: 25px 0 15px 5px;" />
+									style="width:47%;height:auto;	" />
 								</div>
 								<div class="thumbnail index-info" style="">
 									<h4 style="">Specialities</h4>
@@ -117,7 +117,7 @@
 									<p style="">Get multiple quotes</p>
 									<div style=" text-align:center">
 										<span style="">
-											<img src="../images/Arrow.png" style="width:8%;">
+											<img src="../images/Arrow.png" style="width:8%;margin-top:-15px;">
 										</span>
 									</div>
 								</div>
@@ -130,7 +130,7 @@
 							<div class="thumbnail" style="padding-right: 90px;border-color:rgb(255,255,255)">
 								<div class="index-border" style="">
 									<img alt="Goa Medical Travel" src="/images/Icons_DoctorHome.png"
-									style="width:43%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;display: block;padding: 25px 0 15px 5px;">
+									style="width:43%;height:auto;">
 								</div>
 								<div class="thumbnail index-info" style="">
 									<h4 style="">Doctors</h4>
@@ -140,7 +140,7 @@
 									<p style="">Get a second opinion</p>
 									<div style=" text-align:center">
 										<span style="">
-									<img src="../images/Arrow.png" style="width:8%;">
+									<img src="../images/Arrow.png" style="width:8%;margin-top:-15px;">
 										</span>
 									</div>
 								</div>
@@ -154,11 +154,12 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="home2" style="margin-bottom: 0px;">
 		<div class="homeimage" style="position:relative">
-			<img alt="Goa Medical Travel" src="/images/GOAhome(1).jpg" style="width:100%;height:auto">
+			<img alt="Goa Medical Travel" src="/images/GOAhome(1).jpg" style="width:100%;height:auto;filter: grayscale(1);">
 		</div>
-		<div class="row" style="position:absolute;left:610px;top:1080px;">
+		<div class="row" style="position:absolute;left:625px;top:1080px;">
 		<h1 style="color:white;font-family:SourceSansPro-Semibold;">GOA</h1>
 	</div>
 		<div class="row">
@@ -180,8 +181,8 @@
 		</div>
 	</div>
 
-	<div class="row index_help">
-		<p class="title" style="font-size:32px;padding-top:30px; padding-bottom:5px;color: rgb(149,149,149);text-align:center;font-family:SourceSansPro-Semibold;">How We Help</p>
+	<div class="row index_help index_choose">
+		<p class="title" style="">How We Help</p>
 		<div class="row">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
@@ -235,7 +236,7 @@
 					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail null">
 							<img src="/images/Assistance149.png" id="ex6" class="image1" style="padding-top:30px; padding-bottom:20px;" />
-							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
+							<div class="thumbnail null" style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
 								<p style="padding-top: 5px;color:rgb(47,47,47);">Pre/Post Operative Assistance</p>
 							</div>
 						</div>
@@ -243,7 +244,6 @@
 					<div class="row" style="text-align:center;">
 						<a href="/services" style="font-family:SourceSansPro-Regular;font-size:16px;text-decoration:none;">
 							Learn More...
-							<!-- <input type="submit" value="Learn More" style="font-family:SourceSansPro-Regular;font-size:16px;"> -->
 						</a>
 					</div>
 				</div>
