--- a/Gmt/templates/views/services.hbs
+++ b/Gmt/templates/views/services.hbs
@@ -1,7 +1,164 @@
 	{{>header}}
 	<div class="picture marginAlign">
 	</div>
-	<div class="row procedure">
+	<div class="row" style="padding-bottom: 20px;padding-top:50px;">
+		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+		<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+			<div class="row">
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 no-padding">
+					<a href="/providers/hospitals" style="outline:none;">
+						<div class="thumbnail   " style="padding-left: 90px;border:none;">
+							<div class="index-border" style="">
+								<img alt="Goa Medical Travel" src="/images/ProviderResearch149.png" align="middle"
+								style="margin-bottom: 0;width: 30%;height: auto;margin-left: auto;margin-right: auto;display: block;padding: 25px 0 15px 5px;"/>
+							</div>
+							<div class="thumbnail" style="">
+								<h4 style="text-align:center">Providers</h4>
+								<p style="">Find the right provider</p>
+								<p style="">Learn about the facilities</p>
+								<p style="">Request for a free quote</p>
+								<p style="">Send customised queries</p>
+								<div style=" text-align:center">
+									<span style="">
+										<img src="../images/Arrow.png" style="width:8%;">
+									</span>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 no-padding">
+					<a href="/procedure/bones-and-joints" style="outline:none;">
+						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
+							<div class="index-border" style="">
+								<img alt="Goa Medical Travel" src="/images/MedicalVisa149.png"
+								style="width: 30%;height: auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;display: block;padding: 20px 0 15px 5px;" />
+							</div>
+							<div class="thumbnail" style="">
+								<h4 style="text-align:center">Specialities</h4>
+								<p style="">Search by the treatment</p>
+								<p style="">Find provider/doctor option</p>
+								<p style="">Understand pricing</p>
+								<p style="">Get multiple quotes</p>
+								<div style=" text-align:center">
+									<span style="">
+										<img src="../images/Arrow.png" style="width:8%;">
+									</span>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 no-padding">
+					<a href="/doctors" style="outline:none;">
+						<div class="thumbnail" style="padding-right: 90px;border-color:rgb(255,255,255)">
+							<div class="index-border" style="">
+								<img alt="Goa Medical Travel" src="/images/FlightBooking149.png"
+								style="width: 30%;height: auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;display: block;padding: 30px 0 15px 5px;">
+							</div>
+							<div class="thumbnail" style="">
+								<h4 style="text-align:center">Doctors</h4>
+								<p style="">Find the right doctor</p>
+								<p style="">Get doctor specific quote</p>
+								<p style="">Choose appropriate facility</p>
+								<p style="">Get a second opinion</p>
+								<div style=" text-align:center">
+									<span style="">
+								<img src="../images/Arrow.png" style="width:8%;">
+									</span>
+								</div>
+							</div>
+
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		</div>
+	</div>
+
+	<div class="row" style="padding-bottom: 20px;">
+		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+		<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+			<div class="row">
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 no-padding">
+					<a href="/providers/hospitals" style="outline:none;">
+						<div class="thumbnail   " style="padding-left: 90px;border:none;">
+							<div class="index-border" style="">
+								<img alt="Goa Medical Travel" src="/images/Stay149.png" align="middle"
+								style="margin-bottom: 0;width: 30%;height: auto;margin-left: auto;margin-right: auto;display: block;padding: 25px 0 15px 5px;"/>
+							</div>
+							<div class="thumbnail " style="">
+								<h4 style="text-align:center">Providers</h4>
+								<p style="">Find the right provider</p>
+								<p style="">Learn about the facilities</p>
+								<p style="">Request for a free quote</p>
+								<p style="">Send customised queries</p>
+								<div style=" text-align:center">
+									<span style="">
+										<img src="../images/Arrow.png" style="width:8%;">
+									</span>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 no-padding">
+					<a href="/procedure/bones-and-joints" style="outline:none;">
+						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
+							<div class="index-border" style="">
+								<img alt="Goa Medical Travel" src="/images/LocalLogistics149.png"
+								style="width: 30%;height: auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;display: block;padding: 52px 0 15px 5px;" />
+							</div>
+							<div class="thumbnail" style="">
+								<h4 style="text-align:center">Specialities</h4>
+								<p style="">Search by the treatment</p>
+								<p style="">Find provider/doctor option</p>
+								<p style="">Understand pricing</p>
+								<p style="">Get multiple quotes</p>
+								<div style=" text-align:center">
+									<span style="">
+										<img src="../images/Arrow.png" style="width:8%;">
+									</span>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 no-padding">
+					<a href="/doctors" style="outline:none;">
+						<div class="thumbnail" style="padding-right: 90px;border-color:rgb(255,255,255)">
+							<div class="index-border" style="">
+								<img alt="Goa Medical Travel" src="/images/Assistance149.png"
+								style="width: 30%;height: auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;display: block;padding: 50px 0 15px 5px;">
+							</div>
+							<div class="thumbnail" style="">
+								<h4 style="text-align:center">Doctors</h4>
+								<p style="">Find the right doctor</p>
+								<p style="">Get doctor specific quote</p>
+								<p style="">Choose appropriate facility</p>
+								<p style="">Get a second opinion</p>
+								<div style=" text-align:center">
+									<span style="">
+								<img src="../images/Arrow.png" style="width:8%;">
+									</span>
+								</div>
+							</div>
+
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		</div>
+	</div>
+	<!-- <div class="row procedure">
 		<div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
 		<div class="row ">
   <div class="col-lg-2  ">
@@ -62,222 +219,11 @@
       <div class="caption">
         <h3>Flight Booking</h3>
         <p>...</p>
-        <!-- <p><a href="#" class="btn btn-default" role="button">Button</a></p> -->
       </div>
     </div>
   </div>
 </div>
-		<!-- <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-			<div class="panel panel-default">
-				<div class="panel-heading" role="tab" id="headingOne" style="border-radius:4px;">
 
-					<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="outline:none">
-						<h4 class="panel-title">
-							<div class="row">
-								<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-									<span style="color:black">Provider Research</span>
-								</div>
-								<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
-									<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
-								</div>
-							</div>
-						</h4>
-					</a>
-
-				</div>
-				<div id="collapseOne" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingOne">
-					<div class="panel-body">
-						Those whole live with constant stress and strain from their work and daily lifestyle, addicts of tobacco, alcohol and drugs, those who have been taking prescription medicines over a long period of time, those who suffer from ailments such as arthritis,
-						rheumatism, chronic digestive problems, constipation, migraines, obesity, insomnia, or just about anybody who feels the need to purify their body.
-					</div>
-				</div>
-			</div>
-			<div class="panel panel-default">
-				<div class="panel-heading" role="tab" id="headingTwo" style="border-radius:4px;">
-
-					<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="outline:none">
-						<h4 class="panel-title">
-							<div class="row">
-								<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-									<span style="color:black">Medical Visa</span>
-								</div>
-								<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
-									<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
-								</div>
-							</div>
-						</h4>
-					</a>
-
-				</div>
-				<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-					<div class="panel-body">
-						<ul style="list-style-type:circle">
-							<li> All Inclusive Luxury Accommodation </li>
-							<li> Two Daily Educational Talks, Presentations, Workshops and Informal Group Sessions</li>
-							<li> Daily Yoga and Relaxation Session or Workshop</li>
-							<li> Daily Guided Meditation Session or Workshop</li>
-							<li> Daily Holistic Treatments from Across the Globe*</li>
-							<li> Daily Course of over 33 Combining Natural and Ayurvedic Products and Supplements</li>
-							<li> Daily Personalised Nutritionally Balanced Vegetarian Meal Plans (Juices, Broths and Super foods)</li>
-							<li> Two Daily Sessions of Colon Cleansing (self administered).</li>
-							<li> A Personal Diet and Nutrition Consultation and Personalised Planning</li>
-							<li> Life Coaching, Goal Setting</li>
-							<li> An Exclusive One-to-One Session of NLP (Neuro-Linguistic Programming) / Hypnotherapy</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="panel panel-default">
-				<div class="panel-heading" role="tab" id="headingThree" style="border-radius:4px;">
-
-					<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="outline:none">
-						<h4 class="panel-title">
-							<div class="row">
-								<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-										<span style="color:black">Flight Booking</span>
-								</div>
-								<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
-									<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
-								</div>
-							</div>
-						</h4>
-					</a>
-
-				</div>
-				<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-					<div class="panel-body">
-						<table border="1" style="width:100%">
-							<tr>
-								<td>Days</td>
-								<td>Single</td>
-								<td>Couple</td>
-							</tr>
-
-							<tr>
-								<td>5 nights</td>
-								<td>100</td>
-								<td>170</td>
-							</tr>
-							<tr>
-								<td>7 nights</td>
-								<td>200</td>
-								<td>290</td>
-							</tr>
-						</table>
-					</div>
-				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingFour" style="border-radius:4px;">
-
-						<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour" style="outline:none">
-							<h4 class="panel-title">
-								<div class="row">
-									<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-											<span style="color:black">Stay</span>
-									</div>
-									<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
-										<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
-									</div>
-								</div>
-							</h4>
-						</a>
-
-					</div>
-					<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-						<div class="panel-body">
-
-							<ul style="list-style-type:circle">
-								<li> Airport Pick-Up and Delivery </li>
-								<li> Welcome drink </li>
-								<li> Welcome meal (breakfast/lunch or dinner depending on arrival time) </li>
-								<li> Packed snack for departure journey </li>
-								<li> Access to a library of books and DVD's on Health and Wellness </li>
-								<li> Sanda Retreats Total Body Rebalance Workbook </li>
-								<li> Personalised Retreat Diary </li>
-								<li> Complementary Dry-Skin Weight Loss Body Brush </li>
-								<li> Expert support and counseling as and when required </li>
-								<li> Access to a library of books and DVD's on Health and Wellness </li>
-							</ul>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingFive" style="border-radius:4px;">
-
-						<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive" style="outline:none">
-							<h4 class="panel-title">
-								<div class="row">
-									<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-											<span style="color:black">Local Logistics</span>
-									</div>
-									<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
-										<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
-									</div>
-								</div>
-							</h4>
-						</a>
-
-					</div>
-					<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
-						<div class="panel-body">
-
-							<ul style="list-style-type:circle">
-								<li> Airport Pick-Up and Delivery </li>
-								<li> Welcome drink </li>
-								<li> Welcome meal (breakfast/lunch or dinner depending on arrival time) </li>
-								<li> Packed snack for departure journey </li>
-								<li> Access to a library of books and DVD's on Health and Wellness </li>
-								<li> Sanda Retreats Total Body Rebalance Workbook </li>
-								<li> Personalised Retreat Diary </li>
-								<li> Complementary Dry-Skin Weight Loss Body Brush </li>
-								<li> Expert support and counseling as and when required </li>
-								<li> Access to a library of books and DVD's on Health and Wellness </li>
-							</ul>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingSix" style="border-radius:4px;">
-
-						<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix" style="outline:none">
-							<h4 class="panel-title">
-								<div class="row">
-									<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-											<span style="color:black">Pre/Post Operative Assistance</span>
-									</div>
-									<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
-										<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
-									</div>
-								</div>
-							</h4>
-						</a>
-
-					</div>
-					<div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
-						<div class="panel-body">
-
-							<ul style="list-style-type:circle">
-								<li> Airport Pick-Up and Delivery </li>
-								<li> Welcome drink </li>
-								<li> Welcome meal (breakfast/lunch or dinner depending on arrival time) </li>
-								<li> Packed snack for departure journey </li>
-								<li> Access to a library of books and DVD's on Health and Wellness </li>
-								<li> Sanda Retreats Total Body Rebalance Workbook </li>
-								<li> Personalised Retreat Diary </li>
-								<li> Complementary Dry-Skin Weight Loss Body Brush </li>
-								<li> Expert support and counseling as and when required </li>
-								<li> Access to a library of books and DVD's on Health and Wellness </li>
-							</ul>
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> -->
 </div>
-</div>
+</div> -->
 {{>footer}}
