--- a/Gmt/templates/views/partials/header.hbs
+++ b/Gmt/templates/views/partials/header.hbs
@@ -3,7 +3,7 @@
 	<div role="navigation" class="navbar navbar-inverse navbar-fixed-top" style="border-width: 0px;border-radius:0px;background-color:rgba(47,47,47);border-bottom:0px;">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" >
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 					<div class="navbar-header">
 						<div class="row">
 							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
@@ -14,7 +14,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button> -->
-							<div class="col-lg-10  col-md-10 col-sm-10 col-xs-10" >
+							<div class="col-lg-10  col-md-10 col-sm-10 col-xs-10">
 								<a href="/" class="navbar-brand" style="width:100%;height:auto;outline:none">
 									<img alt="Goa Medical Travel" src="/images/gmtwhite.png" class="logo" style="width:60%;height:auto;margin-bottom: 5px; margin-top: 5px;  margin-left: -5px;" />
 								</a>
@@ -29,9 +29,9 @@
 								<div class="collapse navbar-collapse">
 									<ul class="nav navbar-nav navbar-right">
 										{{#each navs}}
-										<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;">
-											<a href="{{ href }}" style="color:rgb(235,235,235);;background-color:rgba(0,0,0,0);">{{ label }}</a>
-										</li>
+											<li {{#ifeq ../section key}} class="active" {{else}} {{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;">
+												<a href="{{ href }}" style="color:rgb(235,235,235);;background-color:rgba(0,0,0,0);">{{ label }}</a>
+											</li>
 										{{/each}}
 									</ul>
 								</div>
@@ -40,11 +40,11 @@
 								<div class="collapse navbar-collapse" style="padding-right: 15px;">
 									<ul class="nav navbar-nav navbar-right">
 										{{#each navLinks}}
-										<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;padding-left:20px;">
-											<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);background-color:rgba(0,0,0,0);">{{ label }}</a>
-										</li>
+											<li {{#ifeq ../section key}} class="active" {{else}} {{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;padding-left:20px;">
+												<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);background-color:rgba(0,0,0,0);">{{ label }}</a>
+											</li>
 										{{/each}}
-										<li  class="btn-connect" style="">
+										<li class="btn-connect" style="">
 											<button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);border:2px solid #FF6C6F;color:#FF6C6F;font-family:SourceSansPro-Regular;font-size:16.5px;" data-toggle="modal" data-target="#myModal">Connect</button>
 										</li>
 										<!-- <li style="padding-left:35px;color:rgb(220,220,220);padding-top: 10px;color">
@@ -64,33 +64,36 @@
 				</div>
 				<div class="col-lg-0 col-md-0 col-sm-1 col-xs-1">
 					<button type="button" data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
 					</button>
 				</div>
 			</div>
 		</div>
 	</div>
 
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+	<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+				</div>
+				<div class="modal-body">
+					<p>Mail us at </p>
+					<p>contact us at</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary">Save changes</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- </div> -->
 </div>
